style: fix whitespace in pgbouncer.ini and update command syntax in docs
update terraform command syntax in documentation to include environment variable setting
fix whitespace formatting in pgbouncer.ini template comment

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -44,7 +44,7 @@ $env:CONSUL_HTTP_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $vaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
-# terraform init; terraform apply ...
+sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
 ```
 <!-- 
 ### 4. Deploy nomad nfs csi node
@@ -99,8 +99,7 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $vaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
-# $env:NOMAD_TOKEN="xxx"
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
 # terraform init; terraform apply ...
 ```
 
@@ -110,6 +109,7 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/exporters/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
 # terraform init; terraform apply ...
 ```
 
@@ -119,5 +119,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/pgbouncer/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
 # terraform init; terraform apply ...
 ```
