VM-deploy-butane: refactor - use variables for consul and nomad data directories
Replace hardcoded paths with variables to make data directories configurable

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -44,7 +44,8 @@ $env:CONSUL_HTTP_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $vaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
-sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
+sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"
+terraform apply
 ```
 <!-- 
 ### 4. Deploy nomad nfs csi node
