--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -110,7 +110,30 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/exporters/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# refer above step to get nomad token
+# terraform apply ...
+```
+
+### Deploy nomad nfs csi controller
+[TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-controller/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/nfs-controller"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init";
+# refer above step to get nomad token
+# terraform init; terraform apply ...
+```
+
+### Deploy nomad volumes
+[TerraformWorkShop/Nomad/Volulmes](../../TerraformWorkShop/Nomad/Volulmes/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Volulmes"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# refer above step to get nomad token
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init";
 # terraform init; terraform apply ...
 ```
 
