--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -137,6 +137,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### Seed DB Credentials to Vault
+[TerraformWorkShop/Vault/Secrets/PostgreSQL/](../../TerraformWorkShop/Vault/Secrets/PostgreSQL/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Secrets/PostgreSQL/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init";
+# terraform apply ...
+```
+
 ### Deploy PgBouncer nomad job
 [TerraformWorkShop/Nomad/Jobs/pgbouncer/](../../TerraformWorkShop/Nomad/Jobs/pgbouncer/)
 ```powershell
