feat(nomad/postgresql): add deployment instructions for PostgreSQL nomad job

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -156,3 +156,13 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
 # terraform init; terraform apply ...
 ```
+
+### Deploy PostgreSQL nomad job
+[TerraformWorkShop/Nomad/Jobs/postgresql/](../../TerraformWorkShop/Nomad/Jobs/postgresql/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/postgresql/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
+# terraform init; terraform apply ...
+```
