--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -100,8 +100,8 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $vaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
-# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
 ```
 
 ### Deploy exporters nomad job
@@ -153,8 +153,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/pgbouncer/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init";
+# terraform apply ...
 ```
 
 ### Deploy PostgreSQL nomad job
