--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -163,6 +163,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/postgresql/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; terraform apply ...
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
+```
+
+### Deploy pgweb nomad job
+[TerraformWorkShop/Nomad/Jobs/pgweb/](../../TerraformWorkShop/Nomad/Jobs/pgweb/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/pgweb/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
 ```
