doc: feat - enhance setup instructions for scoop and terraform with improved path handling

--- a/Doc/SoloLab/0.Preparation.md
+++ b/Doc/SoloLab/0.Preparation.md
@@ -3,7 +3,14 @@
 
 ### Install packages by scoop
 [LocalWorkShop/Import-Scoop](../../LocalWorkShop/Import-Scoop/)
-
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Import-Scoop"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"
+scoop config proxy $proxy
+scoop import scoop.json
+```
 ### Config Hyper-V
 1. Enable Hyper-V feature
 ```powershell
