--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -4,7 +4,9 @@
 $repoDir=git rev-parse --show-toplevel
 $childPath="PackerWorkShop/VyOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# packer init .\plugins.pkr.hcl
+$proxy="127.0.0.1:7890"
+$env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+packer init .\plugins.pkr.hcl
 .\Invoke-PackerBuild.ps1 '15s-cloudinit'
 ```
 
@@ -42,6 +44,9 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 After provisioned resources in this dir, install the root.crt to trust ca dir.
+```powershell
+Import-Certificate -FilePath .\root.crt -CertStoreLocation "Cert:\CurrentUser\Root"
+```
 
 ### Create VyOS VM
 [TerraformWorkShop/Hyper-V/VM-VyOS](../../TerraformWorkShop/Hyper-V/VM-VyOS/)  
