--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -134,7 +134,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
-.\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc"
+.\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -Download $false
 # .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy"
 ```
 
