redis-deploy-nomad-job: feat - add redis job configuration and dynamic volume
- Add redis.nomad.hcl job specification with service, volume mounts and ACL
- Create server.conf with Redis configuration settings
- Add dynamic host volume configuration for Redis data persistence
- Enable var_sets in terraform.tfvars for config template injection

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -176,3 +176,13 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
 # terraform apply ...
 ```
+
+### Deploy Redis nomad job
+[TerraformWorkShop/Nomad/Jobs/redis/](../../TerraformWorkShop/Nomad/Jobs/redis/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/redis/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
+```
