doc: add command to resize coreos vhd, cleanup old ostree data

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -27,6 +27,11 @@ if (-not (Test-Path $ImageDir)) {
 
 4. Rename the vhd to `fedora-coreos-hyperv.x86_64.vhdx` in `C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos`
 
+5. Resize the vhdx file to 30GB
+```powershell
+$vhdxPath="C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos\fedora-coreos-hyperv.x86_64.vhdx"
+Resize-VHD -Path $vhdxPath -SizeBytes 32212254720
+```
 5. Run terraform
 ```powershell
 $repoDir=git rev-parse --show-toplevel
