--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -118,6 +118,17 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ``` -->
 
+### Upload files to dufs
+- Sync files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/SyncTo-Dufs"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab,consul"
+.\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" # -Upload $false
+# .\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/bin"
+```
+
 ### Deploy Grafana to Day1 VM
 [TerraformWorkShop/Quadlet/grafana/](../../TerraformWorkShop/Quadlet/grafana/)
 ```powershell
