doc: move exporter nomad job to the bottom part, add option to place kvpctl

--- a/Doc/SoloLab/0.Preparation.md
+++ b/Doc/SoloLab/0.Preparation.md
@@ -35,7 +35,7 @@ Add-LocalGroupMember -Group "Hyper-V Administrators" -Member "root"
 
 ### Prepare kvpctl tool for fedora core os ignition 
 1. Download kvpctl.exe from https://github.com/containers/libhvee/releases
-2. Extra exe file to C:\Windows
+2. Extra exe file to `C:\Windows` or `%USERPROFILE%\scoop\shims`
 
 ### Prepare skopeo to download and convert docker image to OCI image
 1. Download package for windows from https://github.com/passcod/winskopeo/releases
