consul-ops-ca/vault-ops-policy: remove token binding of consul-ca policy, use approle instead

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -287,7 +287,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### Config LDAP login and sync LDAP user/group to Vault
+### Config LDAP auth backend (login) and sync LDAP user/group to Vault
 [TerraformWorkShop/Vault/Auth/LDAP](../../TerraformWorkShop/Vault/Auth/LDAP/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -296,11 +296,21 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### Config ACL policy in Vault
+### Update ACL policy in Vault
+This action might run once every month, as vault token will expire after 1 month.
 [TerraformWorkShop/Vault/policy](../../TerraformWorkShop/Vault/policy/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/policy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### Config AppRole auth backend (login) in Vault
+[TerraformWorkShop/Vault/Auth/AppRole](../../TerraformWorkShop/Vault/Auth/AppRole/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Auth/AppRole"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
