--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -63,7 +63,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### Config ACL policy in Consul
+### Update ACL policy and CA config in Consul
 [TerraformWorkShop/Consul/ACL](../../TerraformWorkShop/Consul/ACL)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
