doc: update terraform init command

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -64,7 +64,8 @@ Set-Location -Path $originalDir
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/etcd"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy CoreDNS server in Day0 VM
@@ -73,7 +74,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/coredns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Traefik proxy in Day0 VM
@@ -82,7 +84,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/traefik-day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Seed DNS record to etcd
@@ -91,7 +94,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/etcd/skydns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy LLDAP server in Day0 VM
@@ -100,7 +104,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/lldap"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Seed LDAP data in LLDAP
@@ -109,7 +114,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/LDAP/lldap"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy zot image registry in Day0 VM
@@ -118,7 +124,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/zot"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Sync day0 related container images to day0 zot image registry
@@ -150,7 +157,8 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/dex"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### 8. Deploy keycloak IdP in Day0 VM
@@ -159,7 +167,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/keycloak"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### 8. Deploy zitadel IdP in Day0 VM
@@ -168,7 +177,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/zitadel"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 After deploy success, copy machine jwt token into [TerraformWorkShop/zitadel/](../../TerraformWorkShop/zitadel/)
@@ -185,7 +195,8 @@ scp Day0-FCOS:/var/home/podmgr/.local/share/containers/storage/volumes/zitadel-b
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Zitadel/Day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```  
 
 ### Deploy PostgreSQL database in Day0 VM
@@ -194,7 +205,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/postgresql-infra"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ``` -->
 
 
@@ -204,7 +216,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/cockpit"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ``` 
 
 
@@ -215,7 +228,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/sftpgo"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### 13. Config groups in sftpgo 
@@ -224,7 +238,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/SFTPGo/Management"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### 14. Upload files to sftpgo
@@ -244,7 +259,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/dufs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Upload files to dufs
@@ -266,7 +282,8 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/exporters-day0"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Vault server to Day0 VM
@@ -275,7 +292,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/vault"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config KVV2 secret backend in Vault
@@ -284,7 +302,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Secrets/KV-V2"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config LDAP auth backend (login) and sync LDAP user/group to Vault
@@ -293,7 +312,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Auth/LDAP"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Update ACL policy in Vault
@@ -303,7 +323,8 @@ This action might run once every month, as vault token will expire after 1 month
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/policy"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config AppRole auth backend (login) in Vault
@@ -312,7 +333,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Auth/AppRole"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config Vault as OIDC provider
@@ -321,7 +343,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Identity/OIDC"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 # You might need to run `terraform apply` twice
 ```
 
@@ -332,7 +355,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/minio"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 
@@ -342,7 +366,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/MinIO/IAM"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy nfs-ganesha in Day0 VM
@@ -351,5 +376,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/nfs-ganesha"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
