--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -15,7 +15,8 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Hyper-V/VM-Day1-FCOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config PKI Root CA in Vault
@@ -24,7 +25,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Secrets/PKI/RootCA"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config PKI intermediate CA in Vault
@@ -33,7 +35,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Secrets/PKI/Int_CA"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Create certs in Vault
@@ -42,7 +45,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Secrets/PKI/certs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config Consul secret backend / gossip key secret for Consul in Vault
@@ -51,7 +55,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Secrets/Consul/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Consul server to Day1 VM
@@ -60,7 +65,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/consul-server"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Update ACL policy and CA config in Consul
@@ -69,7 +75,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Consul/ACL"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Traefik proxy in Day1 VM
@@ -78,7 +85,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/traefik-day1"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 <!-- 
@@ -88,7 +96,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/consul-template"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ``` -->
 
 ### Deploy consul client to Day0 VM
@@ -97,7 +106,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/consul-client"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy consul client to VyOS VM
@@ -106,7 +116,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/VyOS/Container-Consul"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 <!-- 
 ### Config Minio IAM and bucket in Day0 MinIO
@@ -115,7 +126,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/MinIO/IAM"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ``` -->
 
 ### Upload files to dufs
@@ -135,7 +147,8 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/grafana/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Loki in Day1 VM
@@ -144,7 +157,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/loki"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Alloy in Day0 VM
@@ -153,7 +167,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/alloy"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Prometheus in Day1 VM
@@ -162,7 +177,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/prometheus"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Prometheus Exporters in Day1 VM
@@ -171,7 +187,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/exporters-day1"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Add dashboard to Grafana
@@ -180,7 +197,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Grafana/Dashboard"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy Nomad server to Day1 VM
@@ -189,7 +207,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/nomad"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config Nomad OIDC login and add management token
@@ -204,7 +223,8 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/ACL"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $env:NOMAD_TOKEN="xxx"
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```  
 
 ### Config Vault JWT auth for nomad
@@ -213,7 +233,8 @@ $env:NOMAD_TOKEN="xxx"
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Auth/JWT"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Config Consul JWT auth for nomad
@@ -222,7 +243,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Consul/Auth/JWT"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 <!-- 
 ### Deploy Nomad client to Day1 VM
@@ -231,7 +253,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/System/nomad-client"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
 ### Deploy nomad nfs csi controller
@@ -256,7 +279,8 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
     -H "X-Vault-Token: $VaultToken" `
     $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
-# terraform init; terraform apply ...
+# sudo pwsh.exe -c "terraform init -upgrade";
+# terraform apply ...
 ```
 
  -->
