meilisearch-deploy: - add external dns(powerdns), external L4 load balancer(haproxy), internal dns(coredns + etcd), unify L7 reverse proxy (day1 traefik + consul label), internal reverse proxy (day2 traefik + docker label) - add meilisearch container image - add nomad job and related config

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -186,3 +186,14 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # refer above step to get nomad token
 # terraform apply ...
 ```
+
+### Deploy meilisearch nomad job
+[TerraformWorkShop/Nomad/Jobs/meilisearch/](../../TerraformWorkShop/Nomad/Jobs/meilisearch/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/meilisearch/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# refer above step to get nomad token
+# terraform apply ...
+```
