doc: update skopeo bin file location

--- a/Doc/SoloLab/0.Preparation.md
+++ b/Doc/SoloLab/0.Preparation.md
@@ -39,4 +39,4 @@ Add-LocalGroupMember -Group "Hyper-V Administrators" -Member "root"
 
 ### Prepare skopeo to download and convert docker image to OCI image
 1. Download package for windows from https://github.com/passcod/winskopeo/releases
-2. Put it in C:\Windows\
+2. Put it in `C:\Windows` or `%USERPROFILE%\scoop\shims`
