gitblit-deploy-nomad-job: feat: add gitblit nomad job configuration and related files

--- a/Doc/SoloLab/5.CI.md
+++ b/Doc/SoloLab/5.CI.md
@@ -66,11 +66,11 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 # terraform apply ...
 ```
 
-### Deploy gogs nomad job
-[TerraformWorkShop/Nomad/Jobs/gogs/](../../TerraformWorkShop/Nomad/Jobs/gogs/)
+### Deploy gitblit nomad job
+[TerraformWorkShop/Nomad/Jobs/gitblit/](../../TerraformWorkShop/Nomad/Jobs/gitblit/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Nomad/Jobs/gogs/"
+$childPath="TerraformWorkShop/Nomad/Jobs/gitblit/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
 # terraform apply ...
