doc: comment out deploy process of meilisearch,

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -187,7 +187,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform apply ...
 ```
 
-### Deploy meilisearch nomad job
+<!-- ### Deploy meilisearch nomad job
 [TerraformWorkShop/Nomad/Jobs/meilisearch/](../../TerraformWorkShop/Nomad/Jobs/meilisearch/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -196,4 +196,4 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
 # refer above step to get nomad token
 # terraform apply ...
-```
+``` -->
