Day3-VM-Deploy-hyperv: add day3 vm instead of CI VM

--- a/Doc/SoloLab/5.Day3.md
+++ b/Doc/SoloLab/5.Day3.md
@@ -1,20 +1,19 @@
-### Sync CI node related container images to zot
+### Sync Day3 node related container images to zot
 [LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab,consul"
-.\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "CI.jsonc" # -Upload $false
-# .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "CI.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
+.\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day3.jsonc" # -Upload $false
+# .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day3.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
-
-### Create CI-FCOS VM
-[TerraformWorkShop/Hyper-V/VM-CI-FCOS](../../TerraformWorkShop/Hyper-V/VM-CI-FCOS/)
+### Create Day3-FCOS VM
+[TerraformWorkShop/Hyper-V/VM-Day3-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day3-FCOS/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/VM-CI-FCOS"
+$childPath="TerraformWorkShop/Hyper-V/VM-Day3-FCOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 
 # get consul kv token from vault
@@ -71,6 +70,16 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/gitblit/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
+```
+
+### Deploy nexus3 nomad job
+[TerraformWorkShop/Nomad/Jobs/nexus3/](../../TerraformWorkShop/Nomad/Jobs/nexus3/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/nexus3/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
 # terraform apply ...
