--- a/Doc/SoloLab/5.Day3.md
+++ b/Doc/SoloLab/5.Day3.md
@@ -84,3 +84,13 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
 # terraform apply ...
 ```
+
+### Init nexus3 admin credential
+1. Go to nexus3 container, run following command to get admin credential
+```powershell
+ssh core@Day3-FCOS
+sudo podman container ls --format "{{.ID}} {{.Names}}"
+NEXUS_CONTAINER="XXX"
+sudo podman exec -it $NEXUS_CONTAINER /bin/sh -c "cat /nexus-data/admin.password"
+```
+2. Login nexus3 web console with admin credential then update it to a new password: `P@ssw0rd`
