doc: add dependency description for gitblit and nexus3

--- a/Doc/SoloLab/5.Day3.md
+++ b/Doc/SoloLab/5.Day3.md
@@ -66,6 +66,14 @@ $env:NOMAD_TOKEN = $(curl.exe -k -s -X GET `
 ```
 
 ### Deploy gitblit nomad job
+Pre-request:
+1. External DNS record for gitblit.day3.sololab
+2. External L4 loadbalancer for gitblit.day3.sololab
+3. Internal DNS record for gitblit.day3.sololab
+4. Gitblit data volume in day3-fcos vm
+5. Gitblit container image in  zot.day0.sololab
+6. Gitblit related LDAP group entity in lldap.day0.sololab
+
 [TerraformWorkShop/Nomad/Jobs/gitblit/](../../TerraformWorkShop/Nomad/Jobs/gitblit/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -76,6 +84,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### Deploy nexus3 nomad job
+Pre-request:
+1. External DNS record for nexus3.day3.sololab (in VyOS PowerDNS)
+2. External L4 loadbalancer for nexus3.day3.sololab (in VyOS HAProxy) 
+3. Internal DNS record for nexus3.day3.sololab (in Day0 etcd)
+4. Nexus3 data volume in Day3-FCOS vm
+5. Nexus3 database (in Day2-FCOS vm)
+6. Nexus3 container image to zot.day0.sololab
+7. Nexus3 related LDAP group entity in lldap.day0.sololab
+
 [TerraformWorkShop/Nomad/Jobs/nexus3/](../../TerraformWorkShop/Nomad/Jobs/nexus3/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -94,3 +111,30 @@ NEXUS_CONTAINER="XXX"
 sudo podman exec -it $NEXUS_CONTAINER /bin/sh -c "cat /nexus-data/admin.password"
 ```
 2. Login nexus3 web console with admin credential then update it to a new password: `P@ssw0rd`
+
+### Config nexus3 LDAP
+[TerraformWorkShop/Nexus3/LDAP/](../../TerraformWorkShop/Nexus3/LDAP/)
+```powershell
+
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nexus3/LDAP/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+
+$credential = Get-Credential -Message "credential to login vault"
+
+$vaultBaseUri = New-Object System.Uri("https://vault.day0.sololab/")
+$vaultLoginEndpoint = "/v1/auth/ldap/login/$($credential.UserName)"
+$vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
+$vaultLoginUri.AbsoluteUri
+$vaultToken = $(curl.exe -k -s --request POST `
+    --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
+    $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
+# get consul kv token from kvv2 secret backend
+$vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2_consul/data/token-tf_backend")
+$env:CONSUL_HTTP_TOKEN = $(curl.exe -k -s -X GET `
+    -H "X-Vault-Token: $vaultToken" `
+    $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
+
+# sudo pwsh.exe -c "[System.Environment]::SetEnvironmentVariable('CONSUL_HTTP_TOKEN',`"$env:CONSUL_HTTP_TOKEN`"); terraform init"; 
+# terraform apply ...
+```
